--- a/back-end/Gemfile
+++ b/back-end/Gemfile
@@ -27,6 +27,9 @@ gem "bcrypt", "~> 3.1.7"
 #Use JWT for authentication
 gem 'jwt'
 
+#For serializing response
+gem 'active_model_serializers'
+
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
 
